--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "nodemailer": "^6.9.7",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "validator": "^13.11.0"
   },
   "devDependencies": {
